--- a/VisualizacionesVistas2.ipynb
+++ b/VisualizacionesVistas2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "metadata": {
     "collapsed": true
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 83,
    "metadata": {
     "collapsed": false
    },
@@ -131,7 +131,7 @@
        "2    CHROME  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 84,
    "metadata": {
     "collapsed": false
    },
@@ -178,11 +178,10 @@
        "      <th>so</th>\n",
        "      <th>navegador</th>\n",
        "      <th>mes</th>\n",
-       "      <th>año</th>\n",
+       "      <th>anio</th>\n",
        "      <th>hora</th>\n",
        "      <th>fecha</th>\n",
        "      <th>weekday</th>\n",
-       "      <th>anio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -200,7 +199,6 @@
        "      <td>20</td>\n",
        "      <td>2015-05-15</td>\n",
        "      <td>4</td>\n",
-       "      <td>2015</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -216,7 +214,6 @@
        "      <td>20</td>\n",
        "      <td>2015-05-15</td>\n",
        "      <td>4</td>\n",
-       "      <td>2015</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -227,12 +224,12 @@
        "0 2015-05-15 20:15:09       1        20         3  74:AA:FE:A5:7E:90  ANDROID   \n",
        "1 2015-05-15 20:15:28       3        18         3  74:AA:FE:A5:7E:90  ANDROID   \n",
        "\n",
-       "  navegador  mes   año  hora       fecha  weekday  anio  \n",
-       "0   CXHROME    5  2015    20  2015-05-15        4  2015  \n",
-       "1    CHROME    5  2015    20  2015-05-15        4  2015  "
+       "  navegador  mes  anio  hora       fecha  weekday  \n",
+       "0   CXHROME    5  2015    20  2015-05-15        4  \n",
+       "1    CHROME    5  2015    20  2015-05-15        4  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 85,
    "metadata": {
     "collapsed": false
    },
@@ -271,7 +268,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python2.7/dist-packages/ipykernel/__main__.py:5: UserWarning: This pattern has match groups. To actually get the groups, use str.extract.\n"
+      "/usr/local/lib/python2.7/dist-packages/ipykernel/__main__.py:5: UserWarning:\n",
+      "\n",
+      "This pattern has match groups. To actually get the groups, use str.extract.\n",
+      "\n"
      ]
     }
    ],
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -603,7 +603,7 @@
        "2         3      CITY MALL  Guayaquil -2.140951 -79.911774"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 87,
    "metadata": {
     "collapsed": false
    },
@@ -686,7 +686,7 @@
        "4         Samborondon             750000"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 88,
    "metadata": {
     "collapsed": true
    },
@@ -742,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 89,
    "metadata": {
     "collapsed": true
    },
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 90,
    "metadata": {
     "collapsed": false
    },
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 91,
    "metadata": {
     "collapsed": false
    },
@@ -837,7 +837,7 @@
        "4    11         Samborondon"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 92,
    "metadata": {
     "collapsed": false
    },
@@ -884,11 +884,10 @@
        "      <th>so</th>\n",
        "      <th>navegador</th>\n",
        "      <th>mes</th>\n",
-       "      <th>año</th>\n",
+       "      <th>anio</th>\n",
        "      <th>hora</th>\n",
        "      <th>fecha</th>\n",
        "      <th>weekday</th>\n",
-       "      <th>anio</th>\n",
        "      <th>nombre</th>\n",
        "      <th>ciudad</th>\n",
        "      <th>longitud</th>\n",
@@ -911,7 +910,6 @@
        "      <td>20</td>\n",
        "      <td>2015-05-15</td>\n",
        "      <td>4</td>\n",
-       "      <td>2015</td>\n",
        "      <td>CITY MALL</td>\n",
        "      <td>Guayaquil</td>\n",
        "      <td>-2.140951</td>\n",
@@ -932,7 +930,6 @@
        "      <td>20</td>\n",
        "      <td>2015-05-15</td>\n",
        "      <td>4</td>\n",
-       "      <td>2015</td>\n",
        "      <td>CITY MALL</td>\n",
        "      <td>Guayaquil</td>\n",
        "      <td>-2.140951</td>\n",
@@ -953,7 +950,6 @@
        "      <td>20</td>\n",
        "      <td>2015-05-15</td>\n",
        "      <td>4</td>\n",
-       "      <td>2015</td>\n",
        "      <td>CITY MALL</td>\n",
        "      <td>Guayaquil</td>\n",
        "      <td>-2.140951</td>\n",
@@ -970,10 +966,10 @@
        "1 2015-05-15 20:15:28       3        18         3  74:AA:FE:A5:7E:90  ANDROID   \n",
        "2 2015-05-15 20:15:31       4        20         3  B4:52:7E:3F:CF:B4  ANDROID   \n",
        "\n",
-       "  navegador  mes   año  hora       fecha  weekday  anio     nombre     ciudad  \\\n",
-       "0   CXHROME    5  2015    20  2015-05-15        4  2015  CITY MALL  Guayaquil   \n",
-       "1    CHROME    5  2015    20  2015-05-15        4  2015  CITY MALL  Guayaquil   \n",
-       "2    CHROME    5  2015    20  2015-05-15        4  2015  CITY MALL  Guayaquil   \n",
+       "  navegador  mes  anio  hora       fecha  weekday     nombre     ciudad  \\\n",
+       "0   CXHROME    5  2015    20  2015-05-15        4  CITY MALL  Guayaquil   \n",
+       "1    CHROME    5  2015    20  2015-05-15        4  CITY MALL  Guayaquil   \n",
+       "2    CHROME    5  2015    20  2015-05-15        4  CITY MALL  Guayaquil   \n",
        "\n",
        "   longitud    latitud localizacion  \n",
        "0 -2.140951 -79.911774     CityMall  \n",
@@ -981,7 +977,7 @@
        "2 -2.140951 -79.911774     CityMall  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5711,7 +5707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 105,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -5734,7 +5730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -5748,55 +5744,55 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>CentroComercial</th>\n",
-       "      <th>localizacion</th>\n",
+       "      <th>conexiones</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Aeropuerto</td>\n",
-       "      <td>505381</td>\n",
+       "      <td>101076.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>CentroConvenciones</td>\n",
-       "      <td>409675</td>\n",
+       "      <td>34139.583333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>MallSur</td>\n",
-       "      <td>239860</td>\n",
+       "      <td>CityMall</td>\n",
+       "      <td>38820.166667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>CityMall</td>\n",
-       "      <td>232921</td>\n",
+       "      <td>MallSur</td>\n",
+       "      <td>39976.666667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>OTHER</td>\n",
-       "      <td>202509</td>\n",
+       "      <td>16875.750000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Samborondon</td>\n",
-       "      <td>166370</td>\n",
+       "      <td>15124.545455</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      CentroComercial  localizacion\n",
-       "0          Aeropuerto        505381\n",
-       "1  CentroConvenciones        409675\n",
-       "2             MallSur        239860\n",
-       "3            CityMall        232921\n",
-       "4               OTHER        202509\n",
-       "5         Samborondon        166370"
+       "      CentroComercial     conexiones\n",
+       "0          Aeropuerto  101076.200000\n",
+       "1  CentroConvenciones   34139.583333\n",
+       "2            CityMall   38820.166667\n",
+       "3             MallSur   39976.666667\n",
+       "4               OTHER   16875.750000\n",
+       "5         Samborondon   15124.545455"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5804,16 +5800,17 @@
    "source": [
     "data2016 = data_completa.copy()\n",
     "data2016[\"localizacion_filtrada\"] = data2016[\"localizacion\"].apply(lambda x: FiltrarLugares(top5, x))\n",
-    "data2016 = data2016[['localizacion_filtrada']]\n",
-    "connections2016 = data2016.localizacion_filtrada.value_counts()\n",
-    "connections = connections2016.to_frame().reset_index()\n",
-    "connections.columns=['CentroComercial','localizacion']\n",
+    "data2016 = data2016[['localizacion_filtrada','mes']].groupby(['localizacion_filtrada', 'mes']).size().rename('conexiones').reset_index()\n",
+    "connections2016 = data2016.groupby('localizacion_filtrada').mean()\n",
+    "connections = connections2016.reset_index()\n",
+    "connections = connections[['localizacion_filtrada', 'conexiones']]\n",
+    "connections.columns=['CentroComercial','conexiones']\n",
     "connections"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -5827,7 +5824,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>CentroComercial</th>\n",
-       "      <th>localizacion</th>\n",
+       "      <th>conexiones</th>\n",
        "      <th>poblacion_mensual</th>\n",
        "      <th>#aps</th>\n",
        "    </tr>\n",
@@ -5836,35 +5833,35 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Aeropuerto</td>\n",
-       "      <td>505381</td>\n",
+       "      <td>101076.200000</td>\n",
        "      <td>600000</td>\n",
        "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>CentroConvenciones</td>\n",
-       "      <td>409675</td>\n",
+       "      <td>34139.583333</td>\n",
        "      <td>55000</td>\n",
        "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>MallSur</td>\n",
-       "      <td>239860</td>\n",
-       "      <td>1300000</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>CityMall</td>\n",
-       "      <td>232921</td>\n",
+       "      <td>38820.166667</td>\n",
        "      <td>1200000</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>MallSur</td>\n",
+       "      <td>39976.666667</td>\n",
+       "      <td>1300000</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Samborondon</td>\n",
-       "      <td>166370</td>\n",
+       "      <td>15124.545455</td>\n",
        "      <td>750000</td>\n",
        "      <td>11</td>\n",
        "    </tr>\n",
@@ -5873,15 +5870,15 @@
        "</div>"
       ],
       "text/plain": [
-       "      CentroComercial  localizacion  poblacion_mensual  #aps\n",
-       "0          Aeropuerto        505381             600000    20\n",
-       "1  CentroConvenciones        409675              55000    33\n",
-       "2             MallSur        239860            1300000     6\n",
-       "3            CityMall        232921            1200000     8\n",
-       "4         Samborondon        166370             750000    11"
+       "      CentroComercial     conexiones  poblacion_mensual  #aps\n",
+       "0          Aeropuerto  101076.200000             600000    20\n",
+       "1  CentroConvenciones   34139.583333              55000    33\n",
+       "2            CityMall   38820.166667            1200000     8\n",
+       "3             MallSur   39976.666667            1300000     6\n",
+       "4         Samborondon   15124.545455             750000    11"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5894,7 +5891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 106,
    "metadata": {
     "collapsed": false
    },
@@ -5902,22 +5899,22 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~DanielIzquierdo/3.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~DanielIzquierdo/5.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "df2016.iplot(kind='bubble', x='poblacion_mensual', y='#aps', size='localizacion', text='CentroComercial',\n",
+    "df2016.iplot(kind='bubble', x='poblacion_mensual', y='#aps', size='conexiones', text='CentroComercial',\n",
     "             xTitle='Expectativa Mensual del Centro Comercial', yTitle='# de puntos wifi en la zona',\n",
-    "             filename='bubble-chart-wifi')"
+    "             filename='bubble-chart-wifi-monthly')"
    ]
   }
  ],
